@@ -1,8 +1,9 @@
 module trends {
-    requires jdk.incubator.httpclient;
+    requires java.net.http;
     requires gson;
     requires java.sql;
 //    exports lol.lolpany;
 //    exports lol.lolpany.skills;
 //    exports lol.lolpany.alexa;
+    exports lol.lolpany.skills.hh.vacancies;
 }
